status update for task
